# idlegolem

./: .clang-format  .gitignore  CMakeLists.txt  GDD.md  README.md  comprehensive_game_design_document.md  game_design_document.md
.cache/clangd/index/: main.cpp.16D63038853E9628.idx  prototype_game.cpp.4118C80AB9DD70CF.idx  prototype_game.h.854CD0056F168A57.idx  prototype_game_gameplay.cpp.1EF561E4FBCB521F.idx  prototype_game_internal.h.7557F6EE10A8FB9F.idx  prototype_game_render.cpp.5C4A5B8498E091AA.idx
.github/: copilot-instructions.md
design_document/: ECS.md  GDD.md
spritesource/: bone.ase  cross.ase  tower.ase
src/: config.h  main.cpp  prototype_game.cpp  prototype_game.h  prototype_game_gameplay.cpp  prototype_game_internal.h  prototype_game_render.cpp
src/engine/: application.cpp  application.h  application_config.h  engine.cpp  engine.h  sdl_application.cpp  sdl_application.h
src/game/: components.h  fleshgolem_game.cpp  fleshgolem_game.h  fleshgolem_game_gameplay.cpp  fleshgolem_game_render.cpp  fleshgolem_internal.h  game.cpp  game.h  resources.cpp  resources.h
src/game/resources/: resources.cpp  resources.h
src_new/engine/: application.h
src_new/game/: components.h  game.cpp
src_new/game/resources/: resources.cpp
src_old/: main.cpp
src_old/engine/: game.h
src_old/game/: fleshgolem_game.cpp  fleshgolem_game.h  fleshgolem_game_gameplay.cpp  fleshgolem_game_render.cpp
src_to_refactor/engine/: application.cpp  application.h  application_config.h  game_interface.h
src_to_refactor/game/: components.h  game.cpp  game.h  resources.cpp  resources.h
